--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,11 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
+body:has(.backdrop.is-open) {
+  overflow-y: hidden;
+}
+
 /* #endregion */
 
 /* #region Common */
@@ -47,6 +52,14 @@ img {
 
 button {
   cursor: pointer;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
 }
 
 .section {
@@ -198,14 +211,11 @@ button {
 
 .hero__button {
   display: block;
+
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #fff;
-  border: none;
+  min-width: 169px;
+  height: 56px;
   margin: 0 auto;
   border-radius: 4px;
   padding: 16px 32px;
@@ -540,4 +550,285 @@ button {
 .footer-link:focus {
   background-color: #31d0aa;
 }
+.subscribe {
+  margin-left: auto;
+}
+
+.subscribe__title {
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.subscribe__form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.icon-letter {
+  fill: #fff;
+}
+
+.subscribe__input {
+  width: 264px;
+  height: 40px;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  padding: 8px 16px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+}
+
+.subscribe__button {
+  display: inline-flex;
+  align-items: center;
+  gap: 16px;
+  border-radius: 4px;
+  padding: 8px 24px;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe__input::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.subscribe__input:focus {
+  border: 1px solid #31d0aa;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.subscribe__button:hover,
+.subscribe__button:focus {
+  background-color: #31d0aa;
+}
+
+/* #endregion */
+
+/* #region Modal Form */
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(46, 47, 66, 0.4);
+
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+
+  transition: 300ms ease-in 150ms;
+  transition-property: opacity, visibility;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  pointer-events: initial;
+  visibility: visible;
+  transition-delay: 0ms;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -70%);
+  opacity: 0;
+  width: 408px;
+  min-height: 584px;
+  padding: 72px 24px 24px 24px;
+
+  border-radius: 4px;
+  box-shadow:
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+
+  transition-property: opacity, transform;
+  transition: 150ms ease-in-out;
+}
+
+.backdrop.is-open .modal {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+  transition-delay: 300ms;
+}
+
+.modal__button-close {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  border-radius: 100%;
+  color: #2e2f42;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  transition:
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__button-close:hover,
+.modal__button-close:focus {
+  background-color: #404bbf;
+  color: #fff;
+  border: none;
+}
+.modal__icon-close {
+  fill: currentColor;
+}
+
+.modal__form-wrapper {
+}
+
+.modal__form-text {
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.feedback-form {
+}
+.feedback__field {
+  margin-bottom: 8px;
+}
+.feedback__label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.feedback__input-wrapper {
+  position: relative;
+}
+.feedback__input {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.feedback__form-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback__input:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.feedback__input:focus + .feedback__form-icon {
+  fill: #4d5ae5;
+}
+
+.feedback__comment {
+}
+.feedback__textarea {
+  width: 100%;
+  min-height: 120px;
+  resize: none;
+  outline: none;
+
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding: 8px 16px;
+  margin-bottom: 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback__textarea:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.feedback__textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+/* #region CHECKBOX */
+
+.feedback__checkbox-label {
+  display: block;
+
+  position: relative;
+
+  margin-bottom: 24px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.feedback__toggler {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  cursor: pointer;
+
+  transition:
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback__checkbox-input:checked + .feedback__toggler {
+  background-color: #404bbf;
+  border: 1px solid #404bbf;
+}
+
+.feedback__toggler-icon {
+  opacity: 0;
+}
+.feedback__checkbox-input:checked
+  + .feedback__toggler
+  > .feedback__toggler-icon {
+  opacity: 1;
+}
+
+.feedback__link {
+  line-height: 1.33;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+/* #endregion */
+
 /* #endregion */
