--- a/css/styles.css
+++ b/css/styles.css
@@ -635,7 +635,7 @@ button {
   pointer-events: none;
   visibility: hidden;
 
-  transition: 300ms ease-in 150ms;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: opacity, visibility;
 }
 
@@ -664,7 +664,7 @@ button {
   background-color: #fcfcfc;
 
   transition-property: opacity, transform;
-  transition: 150ms ease-in-out;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open .modal {
@@ -724,10 +724,11 @@ button {
   line-height: 1.16667;
   letter-spacing: 0.04em;
   color: #8e8f99;
+
+  margin-bottom: 4px;
 }
 .feedback__input-wrapper {
   position: relative;
-  margin-top: 4px;
 }
 .feedback__input {
   width: 100%;
@@ -832,7 +833,6 @@ button {
 }
 
 .feedback__link {
-  line-height: 1.33;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #4d5ae5;
