--- a/css/styles.css
+++ b/css/styles.css
@@ -719,6 +719,7 @@ button {
   margin-bottom: 8px;
 }
 .feedback__label {
+  display: block;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16667;
@@ -797,7 +798,7 @@ button {
 
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.17;
+  line-height: 1.13;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
@@ -825,6 +826,7 @@ button {
 
 .feedback__toggler-icon {
   opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .feedback__checkbox-input:checked
   + .feedback__toggler
