--- a/css/styles.css
+++ b/css/styles.css
@@ -647,7 +647,7 @@ button {
 }
 
 .modal {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -70%);
